Refactor and translate comments in MapManager, RegenService, and SyncService for clarity and consistency
- Translated French comments to English in MapManager.java, RegenService.java, and SyncService.java.
- Improved readability and understanding of the code by clarifying technical terms and descriptions.
- Ensured consistency in terminology across the files to enhance maintainability.